// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`omf info should report a rifle animation set 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Read omf file <resources>/gamedata/meshes/omf/wpn_svd_hud_animation.omf",
    "Omf file information",
    "Version: 4",
    "Motions: 3 idle,svd_shoot,svd_reload",
    "Bones total: 7",
    "Parts: default",
    "Part 'default' bones: wpn_body,body,trigger,wpn_scope,zatvor,lock,magazin",
  ],
}
`;

exports[`omf info should report a single motion container 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Read omf file <resources>/gamedata/meshes/omf/wpn_knife_hud_animation.omf",
    "Omf file information",
    "Version: 4",
    "Motions: 1 idle",
    "Bones total: 2",
    "Parts: default",
    "Part 'default' bones: wpn_body,knife",
  ],
}
`;

exports[`omf info should report a submachine gun animation set 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Read omf file <resources>/gamedata/meshes/omf/wpn_mp5_hud_animation.omf",
    "Omf file information",
    "Version: 4",
    "Motions: 3 mp5_shoot,idle,mp5_reload",
    "Bones total: 7",
    "Parts: default",
    "Part 'default' bones: wpn_body,body,trigger,zatvor,lock,wpn_silencer,magazin",
  ],
}
`;

exports[`omf info should write nothing 1`] = `[]`;
